--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ font = "sans serif"
 headless = true
 enableCORS = false
 enableXsrfProtection = true
+maxUploadSize = 50
 
 [browser]
 gatherUsageStats = false
